# oracle-to-dynamodb

./: .gitignore  README.md  oracle_to_dynamodb.py  pyproject.toml
presets/: example.sh
